@@ -1,25 +1,24 @@
 import { BrowserRouter, Routes, Route, Link } from "react-router-dom";
 import { useState, useEffect } from "react";
 const SessionLink = (props) => {
-  const session = props.params;
+  const title = props.title;
+  const sessionNum = props.session_id;
+  const session = props;
+  // console.log(sessionNum);
+  // console.log
   const [session_id, setSession_id] = useState([]);
   useEffect(() => {
     getSession();
   });
   function getSession() {
-    setSession_id(session.session_id);
+    setSession_id(sessionNum);
   }
+
   return (
     <div>
-      {/* <div>{sesh_id}</div> */}
-
-      <Link
-        to={{
-          pathname: "/Session",
-          state: session_id,
-        }}
-      >
-        {session.title}
+      {console.log(session_id)}
+      <Link to="/Session" data={sessionNum}>
+        {title}
       </Link>
     </div>
   );
